zaimのログインURL変更に対応

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,4 +5,4 @@ version = 0.1.0
 [options]
 packages = zaim_warikan
 install_requires =
-    pyzaim @ git+https://github.com/kefi550/pyzaim@feature/driver_quit
+    pyzaim @ git+https://github.com/kefi550/pyzaim@change_zaim_login_url
