--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = zaim_warikan
-version = 0.1.0
+version = 0.1.1
 
 [options]
 packages = zaim_warikan
 install_requires =
-    pyzaim @ git+https://github.com/kefi550/pyzaim@change_zaim_login_url
+    pyzaim @ git+https://github.com/kefi550/pyzaim@feature/driver_quit
